# voters-verdict

./: .editorconfig  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  Rocket.toml  TODO.md  contianer-compose.yml  diesel.toml  manage.sh  package-lock.json  rust-toolchain-deploy.toml  rust-toolchain.toml  webpack.config.js
e2e-ui/: package-lock.json  package.json  playwright.config.ts  run.sh
e2e-ui/tests/: ballots.spec.ts  setup.spec.ts  tables.spec.ts  voting.spec.ts
migrations/2023-12-20-155335_create_votes/: down.sql  up.sql
src/: authentication.rs  ballots.rs  common.rs  config.rs  criteria.rs  error.rs  lib.rs  local.rs  persistence.rs  plumping.rs  remote.rs  routes.rs  serialize.rs  templates.rs  users.rs  validator.rs  votes.rs
src/db/: common.rs  mod.rs  sqlite.rs  sqlx_sqlite.rs
src/templates/: admin.rs  ballots.rs  common.rs  mod.rs  votes.rs
static/: add-emojis-to-labels.js  admin-modify-voting.js  admin-votings.js  admin.js  main.js  manage-votings.js  styles.css  table.css  user-locator.js  voters-verdict.js  voting-colors.css
static/assets/: emojis.json  styles.css  table.css  voting-colors.css
templates/: admin-modify-voting.html.tera  admin-scripts.html.tera  admin-voting.html.tera  admin.html.tera  cast-ballots.html.tera  cast-user-ballots.html.tera  closed-voting.html.tera  error.html.tera  macros.html.tera  manage-votings-scripts.html.tera  manage-votings.html.tera  missing-data.html.tera  scripts.html.tera  stats.html.tera  styles.html.tera  table-styles.html.tera  table-wrapper.html.tera  tables.html.tera  user-locator.html.tera  voting.html.tera  votings.html.tera
test-data/ballots/: index.json  voting-michelle-joe.json  voting-obama-doe.json  voting-obama-joe.json
test-data/candidates/: candidate_doe.json  candidate_joe.json  index.json  voter_michelle.json  voter_obama.json
test-data/criteria/: index.json  style_0_10_15.json  style_10_15_50.json  weather_0_15_15.json
test-data/votings/: index.json  voting.json
